crates/efr-conversation/src/preamble/snapshots/efr_conversation__preamble__tests__a_detached_head_over_ssh_with_only_a_status.snap
---
source: crates/efr-conversation/src/preamble/tests.rs
expression: state.render()
---
<live_state>
The user's shell is in /srv/site/public.
Commands you run with the shell tool start there in a new hidden shell; the hidden shell keeps its own directory between calls.
The user's last command exited with status 0.
Git work tree: /srv/site, detached HEAD.
Home: /home/u
OS: Debian GNU/Linux 13
The user's shell runs over SSH.
$SCRATCH: /home/u/.local/share/efr/scratch/2026-10-04-hello-0a1b2c3d (your own directory for files; writing there needs no approval except in manual mode)
Permission mode: manual
Model: gpt-5.5
Reasoning effort: the backend's default for the model
efr has three permission modes and no others:
- manual: every read, write, command and network access asks the user, except what the user's own rules allow.
- cautious: reads outside secrets, the read-only commands, and writes in $SCRATCH and in the turn's registered project run at once; other calls ask the user.
- auto: what cautious allows, plus the writer programs of the auto list (rm, mv, cp, mkdir and the like) for the writes that cautious allows, and, while the shell is in the turn's registered project or in $SCRATCH, the build, test, format and lint tools and local git of the auto list; other calls ask the user.
Only the user changes this terminal's mode, model and effort, with the lines ,mode ,model and ,effort in their shell, such as ,mode auto; in sticky mode a bare line such as mode auto works too. You cannot change them, and nothing you do changes them for this turn, so never say that you switched or will switch one: tell the user which line to type. Your settings tool changes only the defaults in config.toml, after the user approves its diff, from the next turn on, and a terminal's own choice still wins over them.
</live_state>
