crates/efr-conversation/src/preamble/snapshots/efr_conversation__preamble__tests__a_full_live_state.snap
---
source: crates/efr-conversation/src/preamble/tests.rs
expression: full().render()
---
<live_state>
The user's shell is in /home/u/p/efr; the previous directory was /home/u.
Commands you run with the shell tool start there in a new hidden shell; the hidden shell keeps its own directory between calls.
Your hidden shell is in /etc.
The user's last command was `cargo test -p efr-store`; it exited with status 101.
Git work tree: /home/u/p/efr, branch main.
Home: /home/u
Host: box (Arch Linux)
$SCRATCH: /home/u/.local/share/efr/scratch/2026-10-04-hello-0a1b2c3d (your own directory for files; writing there needs no approval)
Permission mode: auto. Calls outside the auto list ask the user.
Model: gpt-5.5
Reasoning effort: high
efr has three permission modes and no others:
- manual: every call asks the user, except what the user's own rules allow.
- cautious: reads and read-only commands run at once; other calls ask the user.
- auto: what cautious allows, plus the writer programs, the project's build, test, format and lint tools and local git of the auto list; other calls ask the user.
Only the user changes this terminal's mode, model and effort, with the lines ,mode ,model and ,effort in their shell, such as ,mode auto; in sticky mode a bare line such as mode auto works too. You cannot change them, and nothing you do changes them for this turn, so never say that you switched or will switch one: tell the user which line to type. Your settings tool changes only the defaults in config.toml, after the user approves its diff, from the next turn on, and a terminal's own choice still wins over them.
</live_state>
