crates/efr-conversation/src/preamble/snapshots/efr_conversation__preamble__tests__a_minimal_live_state.snap
---
source: crates/efr-conversation/src/preamble/tests.rs
expression: minimal().render()
---
<live_state>
The user's shell is in /home/u.
Commands you run with the shell tool start there in a new hidden shell; the hidden shell keeps its own directory between calls.
Home: /home/u
$SCRATCH: /home/u/.local/share/efr/scratch/2026-10-04-hello-0a1b2c3d (your own directory for files; writing there needs no approval except in manual mode)
Permission mode: cautious
Model: gpt-5.5
Reasoning effort: the backend's default for the model
efr has three permission modes and no others:
- manual: every read, write, command and network access asks the user, except what the user's own rules allow.
- cautious: reads outside secrets, the read-only commands, and writes in $SCRATCH and in the turn's registered project run at once; other calls ask the user.
- auto: shell commands run at once in a sandbox. They can write only in the turn's project, registered projects that the command names, $SCRATCH, /tmp (private to this conversation; the user does not see it) and tool caches (private). They have no network, cannot use sudo, D-Bus or other sockets, and secrets read as empty. Background processes stop when the command ends, so start a server and its test in one command. `tty` prints /dev/console, `df` shows the sandbox's mounts, and `$$` differs from /proc/self. To get more access, call shell again with needs and a reason; the user decides. Do not try a refused action another way. File writes with the write tool outside the project and $SCRATCH ask; share files with the user through $SCRATCH, not /tmp. A command that must run outside the sandbox (sudo, a push) must be alone in its call, apart from read-only helpers such as echo. nested_shell is not available in auto.
Only the user changes this terminal's mode, model and effort, with the lines ,mode ,model and ,effort in their shell, such as ,mode auto; in sticky mode a bare line such as mode auto works too. You cannot change them, and nothing you do changes them for this turn, so never say that you switched or will switch one: tell the user which line to type. Your settings tool changes only the defaults in config.toml, after the user approves its diff, from the next turn on, and a terminal's own choice still wins over them.
</live_state>
