crates/efr-conversation/src/preamble/snapshots/efr_conversation__preamble__tests__a_multi_line_command_goes_in_a_block.snap
---
source: crates/efr-conversation/src/preamble/tests.rs
expression: state.render()
---
<live_state>
The user's shell is in /home/u.
Commands you run with the shell tool start there in a new hidden shell; the hidden shell keeps its own directory between calls.
The user's last command, which exited with status 1:
```
for f in *.log; do
  gzip "$f"
done
```
Home: /home/u
$SCRATCH: /home/u/.local/share/efr/scratch/2026-10-04-hello-0a1b2c3d (your own directory for files; writing there needs no approval)
</live_state>
